# fluxframe

./: .gitignore  README.md  demo_feature_comparison.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
experiments/: benchmark_batching.py  benchmark_neural_opts.py  create_comparison_grid.py  create_comparison_visual.py  demo_feature_comparison.py  demo_neural_optimizations.py  pooling_comparison.sh  quick_comparison.sh  quick_input_size_test.sh  test_input_size_quality.sh  test_multiresolution_ssim.py  test_new_features.py  test_new_features_v2.py  test_pixel_vs_feature.py  test_spatial_color_video.sh
src/fluxframe/: __init__.py  checkpoint.py  cli.py  color_grading.py  config.py  database.py  demo.py  frame_matching.py  matcher.py  metrics.py  models.py  pathfinding.py  processor.py  rendering.py  search.py  video.py
src/fluxframe/generator/: __init__.py  pathfinding.py  rendering.py
tests/: test_e2e.py  test_matcher.py  test_optimizations.py  test_processor.py
