[project]
name = "fluxframe"
version = "0.1.0"
description = "Create video collages by replacing frames with similar images - a temporal visual remix tool"
authors = [{name = "Jan Luhmann"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.62.0",
    "pydantic>=2.0.0",
    "scikit-image>=0.19.0",
    "faiss-cpu>=1.7.0",
    "onnxruntime>=1.16.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
mobilenet = [
    "onnxscript>=0.1.0",
    # PyTorch CPU-only required for first-time ONNX export
    # Cannot specify in pyproject.toml (requires custom index URL)
    # Install manually: uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
]

[project.scripts]
fluxframe = "fluxframe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluxframe"]

[tool.hatch.build.targets.wheel.force-include]
"src/fluxframe/py.typed" = "fluxframe/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific rules
]
ignore = [
    "ISC001", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # Magic value comparisons are acceptable in tests
    "PLC0415",  # Imports in test functions are acceptable
    "ISC002",   # Multi-line string concatenation is acceptable in tests
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "faiss"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onnxruntime"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
